@@ -9,7 +9,6 @@ import tech.cassandre.trading.bot.dto.strategy.StrategyDTO;
 import tech.cassandre.trading.bot.repository.StrategyRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Strategy data fetcher.
@@ -31,7 +30,7 @@ public class StrategyDataFetcher extends BaseDataFetcher {
         return strategyRepository.findAll()
                 .stream()
                 .map(STRATEGY_MAPPER::mapToStrategyDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
